--- a/leetcode.com/leetcode.com.vcxproj
+++ b/leetcode.com/leetcode.com.vcxproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="(Medium) 133. Clone Graph.h" />
+    <ClInclude Include="(Medium) 347. Top K Frequent Elements.h" />
     <ClInclude Include="120.Triangle.h" />
     <ClInclude Include="136. Single Number.h" />
     <ClInclude Include="216. Combination Sum III .h" />
