--- a/leetcode.com/leetcode.com.vcxproj.filters
+++ b/leetcode.com/leetcode.com.vcxproj.filters
@@ -59,5 +59,14 @@
     <ClInclude Include="(Medium) 347. Top K Frequent Elements.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="%28Hard%29 282. Expression Add Operators%28-%29.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="%28Easy%29 263. Ugly Number%28-%29.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="%28Medium%29211. Add and Search Word - Data structure design%28-%29.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
