--- a/ПростоЗадачи/ПростоЗадачи.vcxproj.filters
+++ b/ПростоЗадачи/ПростоЗадачи.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="BitOperations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sort algorythms.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
